Corrected a flex-wrap error in .css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -133,6 +133,7 @@ h2 {
 
 section {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
@@ -162,6 +163,7 @@ a:active {
 
 .card-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 10rem;
 }
